codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__experimental_features_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Experimental features
  Toggle experimental features. Changes are saved to config.toml.

❯ [ ] Ghost snapshots  Capture undo snapshots each turn. [Stable]
  [x] Shell tool       Allow the model to run shell commands. [Stable]

  Press space to select or enter to save for next conversation
